kubernetes/clusters/home/infrastructure/databases/pgadmin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: postgres
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: pgAdmin
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: pgadmin.png
    gethomepage.dev/href: https://pgadmin.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=pgadmin4
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pgadmin.syslabs.dev`)
      kind: Rule
      services:
        - name: pgadmin-pgadmin4
          port: 80
  tls: {}
